# Memories

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2.7pre1  Makefile  Memories.qmlproject  Memories.qmlproject.user.e1e3d4f  README.md  code  content-hub.json  index.html  manifest.json  memories.apparmor  memories.desktop  memories.qml  memories.qmlproject  params.json  ubuntu-ui-extras
cmake/: Translations.cmake
components/: Camera.qml  CameraPage.qml  FilterPage.qml  FilterSidebar.qml  GridLayout.qml  HelloComponent.qml  HomePage.qml  Memory.qml  MemoryEdit.qml  MemoryItem.qml  MemoryPage.qml  NewMemory.qml  PhotoChooser.qml  PhotoItem.qml  PhotoLayout.qml  Sidebar.qml  Toolbar.qml  UbuntuOne.qml  UnlockDialog.qml  WeatherApi.js  storage.js
debian/: changelog  control  copyright  install  memories-app-autopilot.install  memories-app.install
js/: MD5.js
modules/: CMakeLists.txt
modules/Memories/: Plugin.cpp  Plugin.h  Utils.cpp  Utils.h  plugins.qmltypes  qmldir
po/: CMakeLists.txt  Memories.pot  es_CR.po  it.po  memories.pot
qml/: CMakeLists.txt  memories.qml
qml/components/: AboutPage.qml  AudioLayout.qml  Camera.qml  CameraPage.qml  ConfirmPhotoDeleteDialog.qml  DatePicker.qml  FilterSidebar.qml  GalleryPage.qml  GridLayout.qml  HomePage.qml  MD5.js  Memory.qml  MemoryEdit.qml  MemoryItem.qml  MemoryPage.qml  PhotoChooser.qml  PhotoItem.qml  PhotoLayout.qml  SettingsPage.qml  SharePopover.qml  SharePopover.qml.autosave  Sidebar.qml  Spinner.qml  TextTagsRow.qml  UnlockDialog.qml  ValuesSpinner.qml  VerticalDivider.qml  aPhotoChooser.qml
resources/: CMakeLists.txt  memories.desktop  memories.desktop.cmake
tests/autopilot/: run
tests/autopilot/Memories/: __init__.py
tests/autopilot/Memories/emulators/: __init__.py  main_window.py  (+1 more)
tests/autopilot/uitests/: __init__.py
tests/qmltests/: tst_memories.qml
tests/unit/: tst_memories.qml
(+4 files in other folders)
